# ibus-tutcode

./: .gitignore  AUTHORS  Makefile.am  NEWS  README  autogen.sh  configure.ac  ibus-tutcode.json.example  ibus-tutcode.spec.in
engine/: Makefile.am  engine.py  factory.py  ibus-engine-tutcode.in  main.py  skkdict.py  tcode_rule.py  test.py  trycode_rule.py  tutcode-python.xml.in.in  tutcode.py  tutcode.xml.in.in  tutcode_bushudic.py  tutcode_command.py  tutcode_rule.py
icons/: Makefile.am
m4/: Makefile.am
po/: Makevars  POTFILES.in  ja.po
setup/: Makefile.am  config.py
src/: main.c
